--- a/Assist/app/src/main/res/layout/activity_edit_event.xml
+++ b/Assist/app/src/main/res/layout/activity_edit_event.xml
@@ -11,14 +11,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.1" />
+        app:layout_constraintGuide_percent="0.05" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gl_edit_event_right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.9" />
+        app:layout_constraintGuide_percent="0.95" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gl_edit_event_mid"
@@ -132,27 +132,24 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <LinearLayout
-        android:id="@+id/ll_edit_groups"
-        android:layout_width="0dp"
+    <Button
+        android:id="@+id/btn_edit_groups"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toStartOf="@+id/gl_edit_event_right"
-        app:layout_constraintHorizontal_bias="0.0"
+        android:backgroundTint="@color/dark_blue"
+        android:text="@string/groups"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="@+id/gl_edit_event_left"
-        app:layout_constraintTop_toBottomOf="@+id/et_edit_event_reminder"
-        tools:context=".MainActivity">
+        app:layout_constraintTop_toBottomOf="@+id/et_edit_event_reminder" />
 
-        <Button
-            android:id="@+id/btn_edit_groups"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/dark_blue"
-            android:text="@string/groups"
-            android:textSize="16sp" />
-
-    </LinearLayout>
+    <com.google.android.material.chip.ChipGroup
+        android:id="@+id/cg_edit_groups"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toStartOf="@+id/gl_edit_event_right"
+        app:layout_constraintStart_toStartOf="@+id/gl_edit_event_left"
+        app:layout_constraintTop_toBottomOf="@+id/btn_edit_groups" />
 
     <TextView
         android:id="@+id/tv_edit_to"
