--- a/Assist/app/src/main/res/layout/activity_event_add.xml
+++ b/Assist/app/src/main/res/layout/activity_event_add.xml
@@ -6,18 +6,18 @@
     android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/gl_edit_event_left"
+        android:id="@+id/gl_add_event_left"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.1" />
+        app:layout_constraintGuide_percent="0.05" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/gl_edit_event_right"
+        android:id="@+id/gl_add_event_right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.9" />
+        app:layout_constraintGuide_percent="0.95" />
 
     <EditText
         android:id="@+id/et_add_event_name"
@@ -29,8 +29,8 @@
         android:inputType="text"
         android:padding="5dp"
         android:textSize="24sp"
-        app:layout_constraintEnd_toStartOf="@+id/gl_edit_event_right"
-        app:layout_constraintStart_toStartOf="@+id/gl_edit_event_left"
+        app:layout_constraintEnd_toStartOf="@+id/gl_add_event_right"
+        app:layout_constraintStart_toStartOf="@+id/gl_add_event_left"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
@@ -42,9 +42,9 @@
         android:hint="@string/date"
         android:padding="3dp"
         android:inputType="date"
-        app:layout_constraintEnd_toStartOf="@+id/gl_edit_event_right"
+        app:layout_constraintEnd_toStartOf="@+id/gl_add_event_right"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/gl_edit_event_left"
+        app:layout_constraintStart_toStartOf="@+id/gl_add_event_left"
         app:layout_constraintTop_toBottomOf="@+id/et_add_event_name" />
 
     <EditText
@@ -59,7 +59,7 @@
         android:inputType="time"
         android:padding="3dp"
         app:layout_constraintEnd_toStartOf="@+id/tv_add_to"
-        app:layout_constraintStart_toStartOf="@+id/gl_edit_event_left"
+        app:layout_constraintStart_toStartOf="@+id/gl_add_event_left"
         app:layout_constraintTop_toBottomOf="@+id/et_add_event_date" />
 
     <EditText
@@ -73,7 +73,7 @@
         android:hint="@string/end_time"
         android:inputType="time"
         android:padding="3dp"
-        app:layout_constraintEnd_toStartOf="@+id/gl_edit_event_right"
+        app:layout_constraintEnd_toStartOf="@+id/gl_add_event_right"
         app:layout_constraintStart_toEndOf="@+id/tv_add_to"
         app:layout_constraintTop_toBottomOf="@+id/et_add_event_date" />
 
@@ -86,9 +86,9 @@
         android:hint="@string/template"
         android:inputType="text"
         android:padding="3dp"
-        app:layout_constraintEnd_toStartOf="@+id/gl_edit_event_right"
+        app:layout_constraintEnd_toStartOf="@+id/gl_add_event_right"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/gl_edit_event_left"
+        app:layout_constraintStart_toStartOf="@+id/gl_add_event_left"
         app:layout_constraintTop_toBottomOf="@+id/et_add_event_start_time" />
 
     <EditText
@@ -100,9 +100,9 @@
         android:hint="@string/notif_time"
         android:inputType="text"
         android:padding="3dp"
-        app:layout_constraintEnd_toStartOf="@+id/gl_edit_event_right"
+        app:layout_constraintEnd_toStartOf="@+id/gl_add_event_right"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/gl_edit_event_left"
+        app:layout_constraintStart_toStartOf="@+id/gl_add_event_left"
         app:layout_constraintTop_toBottomOf="@+id/et_add_event_template" />
 
     <Button
@@ -117,26 +117,24 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <LinearLayout
-        android:id="@+id/ll_add_groups"
-        android:layout_width="0dp"
+    <Button
+        android:id="@+id/btn_add_groups"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toStartOf="@+id/gl_edit_event_right"
-        app:layout_constraintStart_toStartOf="@+id/gl_edit_event_left"
-        app:layout_constraintTop_toBottomOf="@+id/et_add_event_reminder"
-        tools:context=".MainActivity">
+        android:backgroundTint="@color/dark_blue"
+        android:text="@string/groups"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="@+id/gl_add_event_left"
+        app:layout_constraintTop_toBottomOf="@+id/et_add_event_reminder" />
 
-        <Button
-            android:id="@+id/btn_add_groups"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/dark_blue"
-            android:text="@string/groups"
-            android:textSize="16sp" />
-
-    </LinearLayout>
+    <com.google.android.material.chip.ChipGroup
+        android:id="@+id/cg_add_groups"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toStartOf="@+id/gl_add_event_right"
+        app:layout_constraintStart_toStartOf="@+id/gl_add_event_left"
+        app:layout_constraintTop_toBottomOf="@+id/btn_add_groups" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gl_add_event_mid"
@@ -154,8 +152,8 @@
         android:text="to"
         android:textColor="@color/black"
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/gl_edit_event_right"
-        app:layout_constraintStart_toStartOf="@+id/gl_edit_event_left"
+        app:layout_constraintEnd_toStartOf="@+id/gl_add_event_right"
+        app:layout_constraintStart_toStartOf="@+id/gl_add_event_left"
         app:layout_constraintTop_toBottomOf="@+id/et_add_event_date" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
