icons for event views

--- a/Assist/app/src/main/res/layout/activity_event_add.xml
+++ b/Assist/app/src/main/res/layout/activity_event_add.xml
@@ -42,6 +42,8 @@
         android:hint="@string/date"
         android:padding="3dp"
         android:inputType="date"
+        android:drawableLeft="@drawable/calendar_icon"
+        android:drawablePadding="8dp"
         app:layout_constraintEnd_toStartOf="@+id/gl_add_event_right"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/gl_add_event_left"
@@ -51,10 +53,11 @@
         android:id="@+id/et_add_event_start_time"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginEnd="8dp"
         android:background="@drawable/clear_edit_field"
+        android:drawableLeft="@drawable/clock_icon"
+        android:drawablePadding="8dp"
         android:hint="@string/start_time"
         android:inputType="time"
         android:padding="3dp"
@@ -66,12 +69,13 @@
         android:id="@+id/et_add_event_end_time"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="24dp"
         android:background="@drawable/clear_edit_field"
         android:hint="@string/end_time"
         android:inputType="time"
+        android:drawableLeft="@drawable/clock_icon"
+        android:drawablePadding="8dp"
         android:padding="3dp"
         app:layout_constraintEnd_toStartOf="@+id/gl_add_event_right"
         app:layout_constraintStart_toEndOf="@+id/tv_add_to"
@@ -86,6 +90,8 @@
         android:hint="@string/template"
         android:inputType="text"
         android:padding="3dp"
+        android:drawableLeft="@drawable/template_icon"
+        android:drawablePadding="8dp"
         app:layout_constraintEnd_toStartOf="@+id/gl_add_event_right"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/gl_add_event_left"
@@ -100,6 +106,8 @@
         android:hint="@string/notif_time"
         android:inputType="text"
         android:padding="3dp"
+        android:drawableLeft="@drawable/bell_icon"
+        android:drawablePadding="8dp"
         app:layout_constraintEnd_toStartOf="@+id/gl_add_event_right"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/gl_add_event_left"
