--- a/Assist/app/src/main/res/layout/activity_event_view.xml
+++ b/Assist/app/src/main/res/layout/activity_event_view.xml
@@ -14,6 +14,8 @@
         android:fontFamily="sans-serif-black"
         android:text="7:00 am - 8:30 am"
         android:textSize="16sp"
+        android:drawableLeft="@drawable/clock_icon"
+        android:drawablePadding="8dp"
         app:layout_constraintEnd_toStartOf="@+id/gl_view_event_right"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/gl_view_event_left"
@@ -28,6 +30,8 @@
         android:fontFamily="sans-serif-black"
         android:text="Biology Exam #1 Template"
         android:textSize="16sp"
+        android:drawableLeft="@drawable/template_icon"
+        android:drawablePadding="8dp"
         app:layout_constraintEnd_toStartOf="@+id/gl_view_event_right"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/gl_view_event_left"
@@ -39,6 +43,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:fontFamily="sans-serif-black"
+        android:drawableLeft="@drawable/bell_icon"
+        android:drawablePadding="8dp"
         android:text="1 hour before"
         android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@+id/gl_view_event_right"
@@ -101,6 +107,8 @@
         android:fontFamily="sans-serif-black"
         android:text="Wednesday, August 11, 2021"
         android:textSize="16sp"
+        android:drawableLeft="@drawable/calendar_icon"
+        android:drawablePadding="8dp"
         app:layout_constraintEnd_toStartOf="@+id/gl_view_event_right"
         app:layout_constraintStart_toStartOf="@+id/gl_view_event_left"
         app:layout_constraintTop_toBottomOf="@+id/tv_view_event_name"/>
