--- a/Assist/app/src/main/res/layout/activity_edit_event.xml
+++ b/Assist/app/src/main/res/layout/activity_edit_event.xml
@@ -53,6 +53,8 @@
         android:inputType="date"
         android:padding="3dp"
         android:text="Wednesday, August 11, 2021"
+        android:drawableLeft="@drawable/calendar_icon"
+        android:drawablePadding="8dp"
         app:layout_constraintEnd_toStartOf="@+id/gl_edit_event_right"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/gl_edit_event_left"
@@ -62,10 +64,11 @@
         android:id="@+id/et_edit_event_start_time"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginEnd="8dp"
         android:background="@drawable/clear_edit_field"
+        android:drawableLeft="@drawable/clock_icon"
+        android:drawablePadding="8dp"
         android:hint="@string/start_time"
         android:inputType="time"
         android:padding="3dp"
@@ -78,10 +81,11 @@
         android:id="@+id/et_edit_event_end_time"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="24dp"
         android:background="@drawable/clear_edit_field"
+        android:drawableLeft="@drawable/clock_icon"
+        android:drawablePadding="8dp"
         android:hint="@string/end_time"
         android:inputType="time"
         android:padding="3dp"
@@ -100,6 +104,8 @@
         android:inputType="text"
         android:padding="3dp"
         android:text="Biology Exam #1 Template"
+        android:drawableLeft="@drawable/template_icon"
+        android:drawablePadding="8dp"
         app:layout_constraintEnd_toStartOf="@+id/gl_edit_event_right"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/gl_edit_event_left"
@@ -115,6 +121,8 @@
         android:inputType="text"
         android:padding="3dp"
         android:text="1 hour before"
+        android:drawableLeft="@drawable/bell_icon"
+        android:drawablePadding="8dp"
         app:layout_constraintEnd_toStartOf="@+id/gl_edit_event_right"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/gl_edit_event_left"
